Properly add DriverStatus
